# kiya-agent

./: .gitignore  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: ci.yml
local-mcp/: package.json
local-mcp/src/: index.js
scripts/: clean-tauri-target.mjs  prepare-tauri-resources.mjs  run-with-local-temp.mjs  with-stable-build-env.mjs
src/: App.tsx  i18n.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/dev-bin/: mock-aria2-rpc.mjs
src-tauri/resources/: README.txt  local-mcp.js  runtime-manifest.json
src-tauri/resources/pi-runtime/: package-lock.json  package.json
src-tauri/src/: auth.rs  chat_db.rs  commands.rs  crash_log.rs  main.rs  models.rs  path_guard.rs  pi.rs  services.rs  window_state.rs
src-tauri/src/commands/: downloads.rs  mod.rs  probes.rs  shell.rs
src-tauri/src/pi/: constants.rs  events.rs  mod.rs  prompt.rs  runtime.rs
src/components/: app-shell.tsx  image-gallery-overlay.tsx  message-item.tsx  player-overlay.tsx  section-block.tsx  status-pill.tsx
src/lib/: client-error-reporting.ts
src/pages/: Chat.tsx  Diagnostics.tsx  Downloads.tsx  Login.tsx  Playlist.tsx  Settings.tsx  settings-helpers.test.ts  settings-helpers.ts
src/player/: player-surface.tsx
src/services/: desktop.test.ts  desktop.ts
src/services/desktop/: chat.ts  config.ts  defaults.ts  downloads.ts  (+4 more)
src/stores/: app-store.ts  chat-store.ts  download-store.ts  image-gallery-store.ts  playlist-store.ts
src/types/: app.ts
