[package]
name = "kiya-agent"
version = "0.1.0"
description = "Kiya Agent desktop shell"
authors = ["TRAE"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
base64 = "0.22"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2.1.1", features = [] }
tauri-plugin-store = "2.0.1"
url = "2.5"
uuid = { version = "1.10", features = ["v4"] }
webbrowser = "1.0"
